# grid_sample_plugin

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: GridSample.action
grid_sample_client/: CMakeLists.txt  package.xml  setup.py
grid_sample_client/src/grid_sample_client/: __init__.py  grid_sample_client.py
grid_sample_msgs/: CMakeLists.txt  package.xml
grid_sample_msgs/action/: GridSample.action
grid_sample_plugin/: CMakeLists.txt  README.md  package.xml
grid_sample_plugin/include/: grid_sample_node.h  grid_sampler.h
grid_sample_plugin/scripts/: launch_graspit.sh
grid_sample_plugin/src/: grid_sample_node.cpp  grid_sampler.cpp
include/: grid_sample_node.h  grid_sampler.h
launch/: grid_sample_plugin.launch
src/: grid_sample_node.cpp  grid_sampler.cpp  main.cpp
